--- a/app/templates/datatable.html
+++ b/app/templates/datatable.html
@@ -22,7 +22,7 @@
 							<!-- PAGE-HEADER END -->
 
 							<!-- Row -->
-							{% comment %} <div class="row row-sm">
+							<div class="row row-sm">
 								<div class="col-lg-12">
 									<div class="card">
 										<div class="card-header border-bottom">
@@ -448,11 +448,11 @@
 										</div>
 									</div>
 								</div>
-							</div> {% endcomment %}
+							</div>
 							<!-- End Row -->
 
 							<!-- Row -->
-							{% comment %} <div class="row row-sm">
+							<div class="row row-sm">
 								<div class="col-lg-12">
 									<div class="card">
 										<div class="card-header border-bottom">
@@ -878,7 +878,7 @@
 										</div>
 									</div>
 								</div>
-							</div> {% endcomment %}
+							</div> 
 							<!-- End Row -->
 
 							<!-- Row -->
@@ -1361,7 +1361,7 @@
 														</tr>
 													</tbody>
 												</table>
-												<button {% comment %} id="button" {% endcomment %} class="btn btn-primary mb-4 data-table-btn">Action</button>
+												<button id="button"  class="btn btn-primary mb-4 data-table-btn">Action</button>
 											</div>
 										</div>
 									</div>
@@ -1370,7 +1370,7 @@
 							<!-- End Row -->
 
 							<!-- Row -->
-							{% comment %} <div class="row row-sm">
+							<div class="row row-sm">
 								<div class="col-lg-12">
 									<div class="card">
 										<div class="card-header border-bottom">
@@ -1853,11 +1853,11 @@
 										</div>
 									</div>
 								</div>
-							</div> {% endcomment %}
+							</div> 
 							<!-- End Row -->
 
 							<!-- Row -->
-							{% comment %} <div class="row row-sm">
+							<div class="row row-sm">
 								<div class="col-lg-12">
 									<div class="card">
 										<div class="card-header border-bottom">
@@ -2339,11 +2339,11 @@
 										</div>
 									</div>
 								</div>
-							</div> {% endcomment %}
+							</div> 
 							<!-- End Row -->
 							
 							<!-- Row -->
-							{% comment %} <div class="row row-sm">
+							<div class="row row-sm">
 								<div class="col-lg-12">
 									<div class="card">
 										<div class="card-header border-bottom">
@@ -2825,7 +2825,7 @@
 										</div>
 									</div>
 								</div>
-							</div> {% endcomment %}
+							</div> 
 							<!-- End Row -->
 
         {% endblock %}
