--- a/app/templates/operation-edit.html
+++ b/app/templates/operation-edit.html
@@ -62,7 +62,7 @@
                                     <img src="{% static 'assets/images/icons/calendrier.png' %}" class="side-menu__icon img"/>
                                 </div>
                                 <label for="datetime">Date et Heure de l'opération</label>
-                                <input type="datetime-local" class="form-control" id="date_debut" name="date_debut" value="{{ operation.date_debut}}">
+                                <input type="datetime-local" class="form-control" id="date_debut" name="date_debut" value="{{ operation.date_debut|date:'Y-m-d\TH:i' }}">
                             </div>
                         </div>
 
@@ -73,15 +73,59 @@
                                     <img src="{% static 'assets/images/icons/calendrier.png' %}" class="side-menu__icon img"/>
                                 </div>
                                 <label for="datetime">Date et Heure de fin d'opération</label>
-                                <input type="datetime-local" class="form-control" id="date_fin" name="date_fin" value="{{ operation.date_fin}}">
+                                <input type="datetime-local" class="form-control" id="date_fin" name="date_fin" value="{{ operation.date_fin|date:'Y-m-d\TH:i' }}">
                             </div>
                         </div>
                     </div>
 
 					<div class="row mb-4">
 						<p class="mb-4 text-17"><strong>Main d'œuvre</strong></p>
+						
+						<div class="card-body">
+							<div class="table-responsive deleted-table">
+								{% comment %} <button id="button" class="btn btn-primary mb-4 data-table-btn">Delete selected row</button> {% endcomment %}
+								<table id="delete-datatable" class="table editable-table table-nowrap table-bordered table-edit">
+									<thead>
+										<tr>
+											<th>ID</th>
+											<th>Main d'œuvre</th>
+											<th>Date et Heure de début</th>
+											<th>Date et Heure de fin</th>
+											{% comment %} <th>Modifier</th> {% endcomment %}
+										</tr>
+									</thead>
+									<tbody>
+										{% for main_doeuvre in main_doeuvres %}
+										<tr>
+											<td data-field="id">{{ forloop.counter }}</td>
+											<td data-field="name" for="type">
+												<select class="form-control" id="type_rh" name="type_rh[]">
+													<option value="" disabled>Ouvrier</option>
+													{% for rh in all_rh %}
+														<option value="{{ rh.id }}" {% if rh.id == main_doeuvre.type_rh.id %}selected{% endif %}>
+															{{ rh.nom }} {{ rh.prenom }} ({{ rh.type }})
+														</option>
+													{% endfor %}
+												</select></td>
+											<td data-field="age" for="time">
+												<input type="datetime-local" class="form-control" name="time[]" value="{{ main_doeuvre.time|date:'Y-m-d\TH:i' }}">
+											</td>
+											<td data-field="gender" for="timefin">
+												<input type="datetime-local" class="form-control" name="timefin[]" value="{{ main_doeuvre.timefin|date:'Y-m-d\TH:i' }}">
+											</td>
+											{% comment %} <td style="width: 100px">
+												<a class="btn btn-primary fs-14 text-white edit-icn" title="Edit">
+													<i class="fe fe-edit"></i>
+												</a>
+											</td> {% endcomment %}
+										</tr>
+										{% endfor %}
+									</tbody>
+								</table>
+							</div>
+						</div>
 					
-						{% for main_doeuvre in main_doeuvres %}
+						{% comment %} {% for main_doeuvre in main_doeuvres %}
 						<div class="col-md-12">
 							<p><strong>Main d'œuvre {{ forloop.counter }}:</strong></p>  
 						</div>
@@ -121,12 +165,71 @@
 								<input type="datetime-local" class="form-control" name="timefin[]" value="{{ main_doeuvre.timefin|date:'Y-m-d\TH:i' }}">
 							</div>
 						</div>
-						{% endfor %}
+						{% endfor %} {% endcomment %}
 					</div>
 					
 					<div class="row mb-4">
 						<p class="mb-4 text-17"><strong>Machines et carburants</strong></p>
-						{% for machine_carburant in machine_carburants %}
+
+						<div class="card-body">
+							<div class="table-responsive deleted-table">
+								{% comment %} <button id="button" class="btn btn-primary mb-4 data-table-btn">Delete selected row</button> {% endcomment %}
+								<table id="delete-datatable" class="table editable-table table-nowrap table-bordered table-edit">
+									<thead>
+										<tr>
+											<th>ID</th>
+											<th>Type machine</th>
+											<th>Carburant</th>
+											<th>Quantité carburant en litres</th>
+											<th>Date et Heure de début</th>
+											<th>Date et Heure de fin</th>
+										</tr>
+									</thead>
+									<tbody>
+										{% for machine_carburant in machine_carburants %}
+										<tr>
+											<td data-field="id">{{ forloop.counter }}</td>
+											<td data-field="name" for="type_machine_engins">
+												<select class="form-control" id="type_machine_engins" name="type_machine_engins[]" >
+												<option value="" selected disabled>Camion</option>
+													{% for machine in machines_tables %}
+													<option value="{{ machine.id }}" {% if machine.id == machine_carburant.type_machine_engins.id %}selected{% endif %}>{{ machine.type }} ({{ machine.matricule }})</option>
+													{% endfor %}
+												</select>
+											</td>
+											<td data-field="age" for="carburant">
+												<select class="form-control" id="carburant" name="carburant[]">
+													<option value="" selected disabled>Carburant</option>
+													{% for carburant in carburants %}
+														<option value="{{ carburant.type_carburant }}" 
+															{% if carburant.type_carburant == machine_carburant.carburant %}selected{% endif %}>
+															{{ carburant.type_carburant }}
+														</option>
+													{% endfor %}
+												</select>
+											</td>
+											<td data-field="gender" for="quantite_carburant">
+												<input type="number" class="form-control" id="quantite_carburant"  name= "quantite_carburant[]" placeholder="quantite_du_carburant" value="{{ machine_carburant.quantite_carburant}}">
+											</td>
+											<td data-field="gender" for="duree du programme">
+												<input type="datetime-local" class="form-control" id="duree_utilisation_programme" name="duree_utilisation_programme[]" value="{{ machine_carburant.duree_utilisation_programme|date:'Y-m-d\TH:i' }}">
+											</td>
+											<td data-field="gender" for="heure_de_fin">
+												<input type="datetime-local" class="form-control" id="heure_de_fin" name="heure_de_fin[]" value="{{ machine_carburant.heure_de_fin|date:'Y-m-d\TH:i' }}">
+											</td>
+											{% comment %} <td style="width: 100px">
+												<a class="btn btn-primary fs-14 text-white edit-icn" title="Edit">
+													<i class="fe fe-edit"></i>
+												</a>
+											</td> {% endcomment %}
+										</tr>
+										{% endfor %}
+									</tbody>
+								</table>
+							</div>
+						</div>
+						
+						{% comment %} {% for machine_carburant in machine_carburants %}
 						<div class="col-md-12">
 							<p><strong>Machines et carburants {{ forloop.counter }}:</strong></p>  
 						</div>
@@ -185,14 +288,32 @@
 							</div>
 						</div>
 						
-						{% endfor %}
+						{% endfor %} {% endcomment %}
 					</div>
 					
+					<div class="row mb-4">
+						<p class="mb-4 text-17"><strong>Outils Agricoles</strong></p>
+						
+						<div class="col-md-8 mb-6">
+							<div class="form-row">
+								<div class="col-md-4 mb-6">
+									<div class="avatar mb-2 p-2 lh-1 mb-sm-0 avatar-md rounded-circle me-2">
+										<img src="{% static 'assets/images/icons/outils-de-jardinage.png' %}" class="side-menu__icon img" enable-background="new 0 0 24 24" viewBox="0 0 24 24"/>
+									</div>
+									<label for="outil">Outil</label>
+									<select class="form-control" id="outil" name="outil[]" multiple>
+										{% for outil in outils %}
+											<option value="{{ outil.id }}" {% if outil.id in selected_outils_ids %}selected{% endif %}>
+												{{ outil.name }}
+											</option>
+										{% endfor %}
+									</select>
+								</div>
+							</div>
+						</div>
+						
+					</div>
 					
-					
-
-
-
 
 					<div class="row p-5">
 						<div class="btn-list text-end">
